Gradle tasks to run PrimaryTestsSoak and BenchmarkSuite from the command line.